FFMPEG terminal commands can now be executed